# TelegramBotAPI-cpp

./: CMakeLists.txt  README.md  TelegramVKBot.cpp  TelegramVKBot.h  api_helper.h  main.cpp
TelegramBotAPI/: ApiHelper.cpp  ApiHelper.h  BadRequestError.cpp  BadRequestError.h  ITelegramBot.h  SimpleTelegramBot.cpp  SimpleTelegramBot.h  TelegramBotAPI.h  TelegramBotAPI_Types.cpp  TelegramBotAPI_Types.h
